@@ -1,0 +1,1 @@
+32c980b8562f1006ffe8191923f209bc  madwifi-cvs-20050422.tar.bz2
