@@ -18,13 +18,9 @@
 # Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
 
 PKG := madwifi
-SRC_FILENAME = madwifi-20030802.tgz
-EXTRACTED_DIR = madwifi-20030802
+SRC_FILENAME = madwifi-cvs-20050422.tar.bz2
+EXTRACTED_DIR = madwifi
 DOWNLOAD_SITES = \
-		http://heanet.dl.sourceforge.net/sourceforge/madwifi/ \
-		http://easynews.dl.sourceforge.net/sourceforge/madwifi/ \
-		http://aleron.dl.sourceforge.net/sourceforge/madwifi/ \
-		http://cesnet.dl.sourceforge.net/sourceforge/madwifi/ \
 		$(CFLINUX_PACKAGES)
 
 # include the common package targets 
@@ -44,17 +40,16 @@ build: configure $(BUILT_STAMP)
 
 $(BUILT_STAMP):
 	$(MAKE) -C $(PKG_ROOT) all $(UC_PATH) \
-		KERNEL_PATH=$(BUILD_DIR)/kernel \
-		KERNEL_VERSION=$(KERNEL_VERSION) \
-		LINUX_VERSION=204
+		KERNELPATH=$(BUILD_DIR)/kernel \
+		KERNELRELEASE=$(KERNEL_VERSION)
 	touch $(BUILT_STAMP)
 
 install: build
-	cp $(PKG_ROOT)/wlan/wlan.o \
+	cp $(PKG_ROOT)/net80211/wlan.o \
 		$(ROOTFS)/lib/modules/$(KERNEL_VERSION)/pcmcia
 	cp $(PKG_ROOT)/ath_hal/ath_hal.o \
 		$(ROOTFS)/lib/modules/$(KERNEL_VERSION)/pcmcia
-	cp $(PKG_ROOT)/driver/ath_pci.o \
+	cp $(PKG_ROOT)/ath/ath_pci.o \
 		$(ROOTFS)/lib/modules/$(KERNEL_VERSION)/pcmcia
 
 .PHONY: configure clean build install
